Fix/2074 grid shows skip to end prematurely (#2077)
* Add no-skip-links property to Grid component for improved accessibility

* changeset

* make sure skip links don't register events when they're not visible

* review comments

--- a/packages/components/grid/src/grid.scss
+++ b/packages/components/grid/src/grid.scss
@@ -457,6 +457,7 @@ a[class^='skip-link'] {
   inset-inline-start: calc(anchor(left) + var(--sl-size-100));
   opacity: 0;
   padding: var(--sl-size-100) var(--sl-size-200);
+  pointer-events: none;
   position: fixed;
   position-anchor: --table;
   transition: opacity 0.3s ease-in-out;
@@ -465,7 +466,7 @@ a[class^='skip-link'] {
     opacity: 1;
     outline: var(--sl-color-border-focused) solid var(--sl-size-outlineWidth-default);
     outline-offset: var(--sl-size-outlineOffset-default);
-    z-index: 2;
+    pointer-events: auto;
   }
 
   &:hover {
